[metadata]
name = pip-auto-compile-hook
version = 0.1.0
description = pre-commit hook to automatically pip-compile modified requirements.in files.
url = https://github.com/samathy/pip-auto-compile
author = Samathy Barratt
author_email = samathy@sbarratt.co.uk
license = BSD-2-clause
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7

[options]
py_modules = pip-auto-compile
install_requires = 
    pip-tools >=5.2.1

[options.entry_points]
console_scripts = 
    pip-auto-compile = pipautocompile:main

