[metadata]
name = pip-auto-compile-hook
version = 1.4.0
description = pre-commit hook to automatically pip-compile modified requirements.in files.
url = https://github.com/Osirium/pip-auto-compile
author = Samathy Barratt
author_email = samathy@sbarratt.co.uk
license = BSD-2-clause
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7

[options]
py_modules = pipautocompile
install_requires = 
    pip-tools >= 5.5.0
    filelock >= 3.0.12
    pathlib2;python_version <= "2.7"

[options.entry_points]
console_scripts = 
    pip-auto-compile = pipautocompile:main

